fix squished text on mobile. Center contact us text on mobile

--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -1,26 +1,15 @@
 .menu-wrapper {
-  text-align: center;
-}
-
-.menu-wrapper .menu {
-  width: 1000px;
-}
-
-@media only screen and (max-width: 1080px) {
+  text-align: center; }
   .menu-wrapper .menu {
-    width: 540px;
-  }
-}
-
-@media only screen and (max-width: 540px) {
-  .menu-wrapper .menu {
-    width: 300px;
-  }
-}
-
-.menu-wrapper .info {
-  font-size: 24px;
-  font-weight: 600;
-  margin: 25px 0;
-  text-align: center;
-}
+    width: 1000px; }
+  @media only screen and (max-width: 1080px) {
+    .menu-wrapper .menu {
+      width: 540px; } }
+  @media only screen and (max-width: 540px) {
+    .menu-wrapper .menu {
+      width: 300px; } }
+  .menu-wrapper .info {
+    font-size: 24px;
+    font-weight: 600;
+    margin: 25px 0;
+    text-align: center; }
