--- a/src/sass/about-us.scss
+++ b/src/sass/about-us.scss
@@ -1,5 +1,5 @@
 .about-us {
-    margin: 50px 25vw;
+    margin: 50px 10vw;
     font-size: 20px;
     line-height: 1.5;
 }
