--- a/src/sass/contact-us.scss
+++ b/src/sass/contact-us.scss
@@ -1,7 +1,8 @@
 .contact-us {
-    margin: 50px 25vw;
+    margin: 50px 10vw;
     font-size: 20px;
     line-height: 1.5;
+    text-align: center;
 }
 
 a {
